edit: synchronized the '!ecount' command with the last command changes